--- a/unimetria/WebContent/template.xhtml
+++ b/unimetria/WebContent/template.xhtml
@@ -62,45 +62,23 @@
 			<!-- Sidebar -->
 			<ul class="sidebar navbar-nav bg-info">
 				<li class="nav-item active">
-					<a class="nav-link" href="entrada.xhtml"> 
-						<i class="fas fa-fw fa-indent"></i>
-						<span>Entrada</span>
+					<a class="nav-link" href="cadastroaluno.xhtml"> 
+						<i class="fas fa-fw fa-user-plus"></i>
+						<span>Cadastrar Aluno</span>
 					</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="saida.xhtml"> 
-						<i class="fas fa-fw fa-outdent"></i>
-						<span>Saída</span>
+					<a class="nav-link" href="cadastroprofessor.xhtml"> 
+						<i class="fas fa-fw fa-users"></i>
+						<span>Cadastrar professor</span>
 					</a>
 				</li>
 				<li class="nav-item active"><a class="nav-link"
-					href="Funcionario.xhtml"> <i class="fas fa-fw fa-users"></i> <span>Funcionários</span>
+					href="relatorio.xhtml"> <i class="fas fa-fw fa-file"></i>
+					<span>Relatórios</span>
 				</a></li>
 
-				<li class="nav-item dropdown active">
-					<a class="nav-link dropdown-toggle" href="#" id="pagesDropdown"
-						role="button" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false">
-						<i class="fas fa-fw fa-user"></i>
-						<span>Cliente</span>
-				</a>
-					<div class="dropdown-menu" aria-labelledby="pagesDropdown">
-						<a class="dropdown-item" href="Cliente.xhtml">
-							<i class="fas fa-fw fa-user-plus"></i>
-							Cadastrar
-						</a>
-						<a class="dropdown-item" href="buscarCliente.xhtml"> 
-							<i class="fas fa-fw fa-search"></i>
-							Pesquisar
-						</a>
-					</div>
-				</li>
-				<li class="nav-item active"><a class="nav-link"
-					href="Carro.xhtml"> <i class="fas fa-fw fa-car"></i> <span>Carros</span>
-				</a></li>
-				<li class="nav-item active"><a class="nav-link"
-					href="Servico.xhtml"> <i class="fas fa-fw fa-concierge-bell"></i> <span>Serviços</span>
-				</a></li>
+				
 
 			</ul>
 			<div id="content-wrapper">
